--- a/src/HireMe.css
+++ b/src/HireMe.css
@@ -33,13 +33,75 @@
     width: 100%;
 }
     #NameCard p {
-        top: -90%;
+        top: -60%;
     }
+
+
+.Info_NameCard {
+    background-image: url("./Images/BG/Bg_Name.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    width: 100%;
+    min-height: 10px;
+    height: 13%;
+    left: 0%;
+    top: 4%;
+}
+    .Info_NameCard p {
+        position: absolute;
+        color: white;
+        font-size: 50px;
+        font-weight: 700;
+        top: -45%;
+        left: 5%;
+    }
+
+.Info_Page_Blurb {
+    padding: 10px;
+    padding-top: 7%;
+    padding-left: 5%;
+    margin: 30px;
+    position: absolute;
+}
+
+    .Info_Page_Blurb p {
+        background-color: black;
+        border: 5px solid rgb(30,30,30);
+        padding: 30px;
+        border-radius: 10px;
+    }
+
+    .Info_Page_Blurb h1 {
+        background-color: black;
+        border: 5px solid rgb(30,30,30);
+        padding: 5px;
+        border-radius: 10px;
+    }
+
+.Games_Info_Page {
+    float: left;
+    width: 100%;
+    height: 100%;
+    min-height: 1000px;
+    background-color: darkblue;
+    position: absolute;
+    background-image: url("Images/BG/Games/Bg_Games.png");
+}
+.FullStack_Info_Page {
+    float: left;
+    width: 100%;
+    height: 100%;
+    min-height: 1000px;
+    background-color: darkblue;
+    position: absolute;
+    background-image: url("Images/BG/Web/Bg_Web.png");
+}
 
 .Fullstack_Block_3 {
     float: left;
     width: 100%;
-    min-height: 500px;
+    min-height: 700px;
     background-color: darkgreen;
     position: relative;
     background-image: url("./Images/BG/Web/Bg_Web.png");
@@ -47,7 +109,7 @@
 .Combo_Block_3 {
     float: left;
     width: 100%;
-    min-height: 500px;
+    min-height: 700px;
     background-color: teal;
     position: relative;
     right: 30%;
@@ -56,7 +118,7 @@
 .Unity_Block_3 {
     float: left;
     width: 100%;
-    min-height: 500px;
+    min-height: 700px;
     background-color: blue;
     position: relative;
     right: 40%;
@@ -130,6 +192,7 @@
 .Blurb {
     padding: 10px;
     padding-top: 30%;
+    padding-left: 5%;
 }
     .Blurb p {
         background-color: black;
